--- a/KendoSubGrid/Views/Kendo/Index.cshtml
+++ b/KendoSubGrid/Views/Kendo/Index.cshtml
@@ -45,7 +45,7 @@
                 type: "json",
                 transport: {
                     read: {
-                        url: "/Kendo/GetOrders?employeeId=" + e.data.EmployeeID,
+                        url: "/Kendo/GetOrders?employeeId=" + e.data.employeeID,
                         dataType: "json"
                     }
                 },
@@ -56,6 +56,7 @@
                 { field: "shipCountry", title: "Ship Country", width: "110px" },
                 { field: "shipAddress", title: "Ship Address" },
                 { field: "shipName", title: "Ship Name", width: "300px" }
+                // {field: "employeeID", title: "Id" }
             ]
         });
     }
